src/compiler/JavaGrammar.java
/* Generated By:JavaCC: Do not edit this line. JavaGrammar.java */
package compiler;


public class JavaGrammar implements JavaGrammarConstants {
  public static void main(String args []) throws ParseException
  {
    try {
            JavaGrammar parser = new JavaGrammar(System.in);
            parser.INICIO();
            System.out.println("Foi compilado com exito");
        } catch(Exception e) {
                System.out.println(e.getMessage());
                System.out.println("Foram encontrado erros");
        }
    /*while (true)    {      System.out.println("Reading from standard input...");      System.out.print("Enter an expression like \"1+(2+3)*4;\" :");      try      {        switch (JavaGrammar.Programa())        {          case 0 :           System.out.println("OK.");          break;          case 1 :           System.out.println("Goodbye.");          break;          default :           break;        }      }      catch (Exception e)      {        System.out.println("NOK.");        System.out.println(e.getMessage());        JavaGrammar.ReInit(System.in);      }      catch (Error e)      {        System.out.println("Oops.");        System.out.println(e.getMessage());        break;      }    }  }*/
}

/*
* GRAMATICA DA LINGUAGEM JAVA
*/
  static final public void INICIO() throws ParseException {
    Programa();
  }

  static final public void Programa() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PACKAGE:
      DeclaracaoDePacote();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPORT:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      DeclaracaoDeImport();
    }
    DeclaracaoDeClasse();
  }

  static final public void DeclaracaoDePacote() throws ParseException {
    jj_consume_token(PACKAGE);
    jj_consume_token(IDENTIFICADOR);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PONTO:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      DeclaracaoEstendida();
    }
    jj_consume_token(PONTO_VIRGULA);
  }

  static final public void DeclaracaoDeImport() throws ParseException {
    jj_consume_token(IMPORT);
    jj_consume_token(IDENTIFICADOR);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PONTO:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      DeclaracaoEstendida();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PONTO_ASTERISCO:
      jj_consume_token(PONTO_ASTERISCO);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(PONTO_VIRGULA);
  }

  static final public void DeclaracaoEstendida() throws ParseException {
    jj_consume_token(PONTO);
    jj_consume_token(IDENTIFICADOR);
  }

  static final public void DeclaracaoDeClasse() throws ParseException {
    Modificador();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FINAL:
      jj_consume_token(FINAL);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(AC);
    CorpoDaClasse();
    jj_consume_token(FC);
  }

  static final public void CorpoDaClasse() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 75:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      Main();
    }
  }

  static final public void Main() throws ParseException {
    jj_consume_token(75);
    jj_consume_token(AP);
    jj_consume_token(STRING);
    jj_consume_token(AB);
    jj_consume_token(FB);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(FP);
    BlocoDeDeclaracoes();
  }

  static final public void Modificador() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRIVATE:
      jj_consume_token(PRIVATE);
      break;
    case PROTECTED:
      jj_consume_token(PROTECTED);
      break;
    case PUBLIC:
      jj_consume_token(PUBLIC);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void BlocoDeDeclaracoes() throws ParseException {
    jj_consume_token(AC);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RETURN:
      case PRINT:
      case IF:
      case WHILE:
      case INT:
      case FLOAT:
      case STRING:
      case CHAR:
      case BOOLEAN:
      case VOID:
      case AP:
      case NEGACAO:
      case IDENTIFICADOR:
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      CorpoDaDeclaracao();
    }
    jj_consume_token(FC);
  }

  static final public void CorpoDaDeclaracao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case FLOAT:
    case STRING:
    case CHAR:
    case BOOLEAN:
    case VOID:
      TipoDeDado();
      jj_consume_token(IDENTIFICADOR);
      DeclaracaoDeVariavel();
      break;
    case RETURN:
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NULL:
      case TRUE:
      case FALSE:
        OpcoesDeRetorno();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(PONTO_VIRGULA);
      break;
    case IF:
      If_Else();
      break;
    case PRINT:
      Print();
      break;
    case WHILE:
      While();
      break;
    case AP:
    case NEGACAO:
    case IDENTIFICADOR:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
      Expressao();
      jj_consume_token(PONTO_VIRGULA);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void TipoDeDado() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case STRING:
      jj_consume_token(STRING);
      break;
    case CHAR:
      jj_consume_token(CHAR);
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
      break;
    case VOID:
      jj_consume_token(VOID);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void DeclaracaoDeVariavel() throws ParseException {
    InicializacaoDeVariavel();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      jj_consume_token(VIRGULA);
      jj_consume_token(IDENTIFICADOR);
      InicializacaoDeVariavel();
    }
    jj_consume_token(PONTO_VIRGULA);
  }

  static final public void InicializacaoDeVariavel() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATRIBUICAO:
      jj_consume_token(ATRIBUICAO);
      OpcoesDeInicializacao();
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
  }

  static final public void OpcoesDeInicializacao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NULL:
      jj_consume_token(NULL);
      break;
    case FALSE:
      jj_consume_token(FALSE);
      break;
    case TRUE:
      jj_consume_token(TRUE);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void OpcoesDeRetorno() throws ParseException {
    OpcoesDeInicializacao();
  }

  static final public void If_Else() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(AP);
    Expressao();
    jj_consume_token(FP);
    BlocoDeDeclaracoes();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      BlocoDeDeclaracoes();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  static final public void Print() throws ParseException {
    jj_consume_token(PRINT);
    jj_consume_token(AP);
    Expressao();
    jj_consume_token(FP);
    jj_consume_token(PONTO_VIRGULA);
  }

  static final public void While() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(AP);
    Expressao();
    jj_consume_token(FP);
    BlocoDeDeclaracoes();
  }

  static final public void Expressao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEGACAO:
      jj_consume_token(NEGACAO);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFICADOR:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFICADOR:
        jj_consume_token(IDENTIFICADOR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AP:
        case INCREMENTO:
        case DECREMENTO:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case AP:
            ChamadaDeMetodo();
            break;
          case INCREMENTO:
            jj_consume_token(INCREMENTO);
            break;
          case DECREMENTO:
            jj_consume_token(DECREMENTO);
            break;
          default:
            jj_la1[17] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[18] = jj_gen;
          ;
        }
        break;
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
        ExpressaoLiteral();
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SOMA:
      case SUBTRACAO:
      case MUTIPLICACAO:
      case DIVISAO:
      case MODULO:
      case SOMA_PLUS:
      case SUBTRACAO_PLUS:
      case MULTIPLICACAO_PLUS:
      case DIVISAO_PLUS:
      case MODULO_PLUS:
      case ATRIBUICAO:
      case IGUALDADE:
      case DIFERENCA:
      case MENOR:
      case MAIOR:
      case MENOR_IGUAL:
      case MAIOR_IGUAL:
      case AND:
      case OR:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ATRIBUICAO:
          Atribuicao();
          break;
        case AND:
        case OR:
          ComparacaoLogica();
          break;
        case IGUALDADE:
        case DIFERENCA:
        case MENOR:
        case MAIOR:
        case MENOR_IGUAL:
        case MAIOR_IGUAL:
          ComparacaoRelacional();
          break;
        case SOMA:
        case SUBTRACAO:
        case MUTIPLICACAO:
        case DIVISAO:
        case MODULO:
        case SOMA_PLUS:
        case SUBTRACAO_PLUS:
        case MULTIPLICACAO_PLUS:
        case DIVISAO_PLUS:
        case MODULO_PLUS:
          ExpressaoNumerica();
          break;
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      break;
    case AP:
      jj_consume_token(AP);
      Expressao();
      jj_consume_token(FP);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ChamadaDeMetodo() throws ParseException {
    jj_consume_token(AP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AP:
    case NEGACAO:
    case IDENTIFICADOR:
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
      ListaDeArgumentos();
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(FP);
  }

  static final public void ListaDeArgumentos() throws ParseException {
    Expressao();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_7;
      }
      jj_consume_token(VIRGULA);
      Expressao();
    }
  }

  static final public void ExpressaoLiteral() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      jj_consume_token(INTEGER_LITERAL);
      break;
    case FLOATING_POINT_LITERAL:
      jj_consume_token(FLOATING_POINT_LITERAL);
      break;
    case CHARACTER_LITERAL:
      jj_consume_token(CHARACTER_LITERAL);
      break;
    case STRING_LITERAL:
      jj_consume_token(STRING_LITERAL);
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Atribuicao() throws ParseException {
    jj_consume_token(ATRIBUICAO);
    Expressao();
  }

  static final public void ComparacaoLogica() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      break;
    case OR:
      jj_consume_token(OR);
      break;
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    Expressao();
  }

  static final public void ComparacaoRelacional() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAIOR:
      jj_consume_token(MAIOR);
      break;
    case MENOR:
      jj_consume_token(MENOR);
      break;
    case MAIOR_IGUAL:
      jj_consume_token(MAIOR_IGUAL);
      break;
    case MENOR_IGUAL:
      jj_consume_token(MENOR_IGUAL);
      break;
    case IGUALDADE:
      jj_consume_token(IGUALDADE);
      break;
    case DIFERENCA:
      jj_consume_token(DIFERENCA);
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    Expressao();
  }

  static final public void ExpressaoNumerica() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SOMA:
      jj_consume_token(SOMA);
      break;
    case SOMA_PLUS:
      jj_consume_token(SOMA_PLUS);
      break;
    case SUBTRACAO:
      jj_consume_token(SUBTRACAO);
      break;
    case SUBTRACAO_PLUS:
      jj_consume_token(SUBTRACAO_PLUS);
      break;
    case MUTIPLICACAO:
      jj_consume_token(MUTIPLICACAO);
      break;
    case MULTIPLICACAO_PLUS:
      jj_consume_token(MULTIPLICACAO_PLUS);
      break;
    case DIVISAO:
      jj_consume_token(DIVISAO);
      break;
    case DIVISAO_PLUS:
      jj_consume_token(DIVISAO_PLUS);
      break;
    case MODULO:
      jj_consume_token(MODULO);
      break;
    case MODULO_PLUS:
      jj_consume_token(MODULO_PLUS);
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    Expressao();
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public JavaGrammarTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[29];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static private int[] jj_la1_2;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
      jj_la1_init_2();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x2000,0x1000,0x0,0x0,0x0,0x40000000,0x0,0x80000000,0x1f8b8000,0x600800,0x1f8b8000,0x1f800000,0x0,0x0,0x600800,0x40000,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x200,0x200,0x800,0x0,0x0,0x3,0x10,0x0,0x10,0x0,0x100,0x400000,0x0,0x0,0x0,0x1800010,0x1800010,0x0,0xfe7ff000,0xfe7ff000,0x10,0x10,0x100,0x0,0x80000000,0x7e000000,0x3ff000,};
   }
   private static void jj_la1_init_2() {
      jj_la1_2 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x800,0x0,0x6a6,0x0,0x6a6,0x0,0x0,0x0,0x0,0x0,0x2,0x0,0x0,0x6a4,0x1,0x1,0x6a4,0x6a6,0x0,0x6a0,0x1,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public JavaGrammar(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public JavaGrammar(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new JavaGrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 29; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 29; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public JavaGrammar(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new JavaGrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 29; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 29; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public JavaGrammar(JavaGrammarTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
